--- a/translations/translation_cz.xml
+++ b/translations/translation_cz.xml
@@ -351,6 +351,10 @@
 		<text name="COURSEPLAY_FUNCTIONS" 									text="Funkce Courseplay" />
 
 		<!--Action Events-->
+		<text name="COURSEPLAY_MOUSEACTION_PRIMARY"							text="primary Mousebutton" />
+		<text name="COURSEPLAY_MOUSEACTION_SECONDARY"						text="secondary Mousebutton" />
+		<text name="input_COURSEPLAY_MOUSEACTION_PRIMARY"					text="primary Mousebutton" />
+		<text name="input_COURSEPLAY_MOUSEACTION_SECONDARY"					text="secondary Mousebutton" />
 		<!--HUD-->
 		<text name="input_COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 				text="Courseplay: open/close HUD" />
 		<text name="input_COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 				text="Courseplay: next mode" />
@@ -393,28 +397,28 @@
 		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
 		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
 		<!--Editor-->
-		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Přepnout do editoru tras" />
-		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Vrátit zpět poslední úpravy" />
-		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Uložit změny tras" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Zvýšení rychlosti trasového bodu" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Snížení rychlosti trasového bodu" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Smazat trasový bod" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Smazat následující trasový bod" />  
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Smazat všechny body po start" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Smazat všechny body po konec" />
-		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Vložit trasový bod" />
-		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Změnit typ trasového bodu" />
-		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: Přepnout do editoru tras" />
-		<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: Vrátit zpět poslední úpravy" />
-		<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: Uložit změny tras" />
-		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: Zvýšení rychlosti trasového bodu" />
-		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: Snížení rychlosti trasového bodu" />
-		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Smazat trasový bod" />
-		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: Smazat následující trasový bod" />  
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Smazat všechny body po start" />
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Smazat všechny body po konec" />
-		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Vložit trasový bod" />
-		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: Změnit typ trasového bodu" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_TOGGLE"					text="Courseplay Editor: Přepnout do editoru tras" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_UNDO"					text="Courseplay Editor: Vrátit zpět poslední úpravy" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_SAVE"					text="Courseplay Editor: Uložit změny tras" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_SPEED_INCREASE"			text="Courseplay Editor: Zvýšení rychlosti trasového bodu" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_SPEED_DECREASE"			text="Courseplay Editor: Snížení rychlosti trasového bodu" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_DELETE_WAYPOINT"			text="Courseplay Editor: Smazat trasový bod" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_DELETE_NEXT_WAYPOINT"	text="Courseplay Editor: Smazat následující trasový bod" />  
+		<text name="input_COURSEPLAY_ACTION_EDITOR_DELETE_TO_START"			text="Courseplay Editor: Smazat všechny body po start" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_DELETE_TO_END"			text="Courseplay Editor: Smazat všechny body po konec" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_INSERT_WAYPOINT"			text="Courseplay Editor: Vložit trasový bod" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_CYCLE_WAYPOINT_TYPE"		text="Courseplay Editor: Změnit typ trasového bodu" />
+		<text name="COURSEPLAY_ACTION_EDITOR_TOGGLE"						text="Courseplay Editor: Přepnout do editoru tras" />
+		<text name="COURSEPLAY_ACTION_EDITOR_UNDO"							text="Courseplay Editor: Vrátit zpět poslední úpravy" />
+		<text name="COURSEPLAY_ACTION_EDITOR_SAVE"							text="Courseplay Editor: Uložit změny tras" />
+		<text name="COURSEPLAY_ACTION_EDITOR_SPEED_INCREASE"				text="Courseplay Editor: Zvýšení rychlosti trasového bodu" />
+		<text name="COURSEPLAY_ACTION_EDITOR_SPEED_DECREASE"				text="Courseplay Editor: Snížení rychlosti trasového bodu" />
+		<text name="COURSEPLAY_ACTION_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Smazat trasový bod" />
+		<text name="COURSEPLAY_ACTION_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Smazat následující trasový bod" />  
+		<text name="COURSEPLAY_ACTION_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Smazat všechny body po start" />
+		<text name="COURSEPLAY_ACTION_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Smazat všechny body po konec" />
+		<text name="COURSEPLAY_ACTION_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Vložit trasový bod" />
+		<text name="COURSEPLAY_ACTION_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Změnit typ trasového bodu" />
 		
 		<text name="COURSEPLAY_EDITOR_NORMAL" 								text="Normální" />
 		<text name="COURSEPLAY_EDITOR_WAIT" 								text="Čekat" />
