--- a/translations/translation_es.xml
+++ b/translations/translation_es.xml
@@ -351,6 +351,10 @@
 		<text name="COURSEPLAY_FUNCTIONS" 									text="Funciones de Courseplay" />
 
 		<!--Action Events-->
+		<text name="COURSEPLAY_MOUSEACTION_PRIMARY"							text="primary Mousebutton" />
+		<text name="COURSEPLAY_MOUSEACTION_SECONDARY"						text="secondary Mousebutton" />
+		<text name="input_COURSEPLAY_MOUSEACTION_PRIMARY"					text="primary Mousebutton" />
+		<text name="input_COURSEPLAY_MOUSEACTION_SECONDARY"					text="secondary Mousebutton" />
 		<!--HUD-->
 		<text name="input_COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 				text="Courseplay: open/close HUD" />
 		<text name="input_COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 				text="Courseplay: next mode" />
@@ -393,28 +397,28 @@
 		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
 		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
 		<!--Editor-->
-		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: activar editor de ruta" />
-		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: deshacer última modificación" />
-		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: guardar cambios" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: aumentar velocidad en punto de ruta" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: disminuir velocidad en punto de ruta" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: eliminar punto de ruta" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: eliminar siguiente punto de ruta" />  
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: eliminar todos los puntos de ruta desde el principio" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: eliminar todos los puntos de ruta hasta el final" />
-		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: insertar punto de ruta" />
-		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: cambiar tipo de punto de ruta" />
-		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: activar editor de ruta" />
-		<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: deshacer última modificación" />
-		<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: guardar cambios" />
-		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: aumentar velocidad en punto de ruta" />
-		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: disminuir velocidad en punto de ruta" />
-		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: eliminar punto de ruta" />
-		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: eliminar siguiente punto de ruta" />  
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: eliminar todos los puntos de ruta desde el principio" />
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: eliminar todos los puntos de ruta hasta el final" />
-		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: insertar punto de ruta" />
-		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: cambiar tipo de punto de ruta" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_TOGGLE"					text="Courseplay Editor: activar editor de ruta" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_UNDO"					text="Courseplay Editor: deshacer última modificación" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_SAVE"					text="Courseplay Editor: guardar cambios" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_SPEED_INCREASE"			text="Courseplay Editor: aumentar velocidad en punto de ruta" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_SPEED_DECREASE"			text="Courseplay Editor: disminuir velocidad en punto de ruta" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_DELETE_WAYPOINT"			text="Courseplay Editor: eliminar punto de ruta" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_DELETE_NEXT_WAYPOINT"	text="Courseplay Editor: eliminar siguiente punto de ruta" />  
+		<text name="input_COURSEPLAY_ACTION_EDITOR_DELETE_TO_START"			text="Courseplay Editor: eliminar todos los puntos de ruta desde el principio" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_DELETE_TO_END"			text="Courseplay Editor: eliminar todos los puntos de ruta hasta el final" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_INSERT_WAYPOINT"			text="Courseplay Editor: insertar punto de ruta" />
+		<text name="input_COURSEPLAY_ACTION_EDITOR_CYCLE_WAYPOINT_TYPE"		text="Courseplay Editor: cambiar tipo de punto de ruta" />
+		<text name="COURSEPLAY_ACTION_EDITOR_TOGGLE"						text="Courseplay Editor: activar editor de ruta" />
+		<text name="COURSEPLAY_ACTION_EDITOR_UNDO"							text="Courseplay Editor: deshacer última modificación" />
+		<text name="COURSEPLAY_ACTION_EDITOR_SAVE"							text="Courseplay Editor: guardar cambios" />
+		<text name="COURSEPLAY_ACTION_EDITOR_SPEED_INCREASE"				text="Courseplay Editor: aumentar velocidad en punto de ruta" />
+		<text name="COURSEPLAY_ACTION_EDITOR_SPEED_DECREASE"				text="Courseplay Editor: disminuir velocidad en punto de ruta" />
+		<text name="COURSEPLAY_ACTION_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: eliminar punto de ruta" />
+		<text name="COURSEPLAY_ACTION_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: eliminar siguiente punto de ruta" />  
+		<text name="COURSEPLAY_ACTION_EDITOR_DELETE_TO_START"				text="Courseplay Editor: eliminar todos los puntos de ruta desde el principio" />
+		<text name="COURSEPLAY_ACTION_EDITOR_DELETE_TO_END"					text="Courseplay Editor: eliminar todos los puntos de ruta hasta el final" />
+		<text name="COURSEPLAY_ACTION_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: insertar punto de ruta" />
+		<text name="COURSEPLAY_ACTION_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: cambiar tipo de punto de ruta" />
 		
 		<text name="COURSEPLAY_EDITOR_NORMAL" 								text="Normal" />
 		<text name="COURSEPLAY_EDITOR_WAIT" 								text="Pausa" />
